--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <h1>My Image Gallery</h1>
     <p>This is where I share my images</p>
     
-    <!-- Your images will go here -->
+<img src="images/your-image-name.jpg" alt="Ice cream is awesome">
+<br><br>
+<img src="images/another-image.png" alt="Beagles are cute">
     
 </body>
 </html>
