--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <h1>My Image Gallery</h1>
     <p>This is where I share my images</p>
     
-<img src="Beagle.png" alt="Ice cream is awesome">
+<img src="images/Beagle.png" alt="Ice cream is awesome">
 <br><br>
-<img src="Ice_Cream.png" alt="Beagles are cute">
+<img src="images/Ice_Cream.png" alt="Beagles are cute">
     
 </body>
 </html>
