--- a/index.html
+++ b/index.html
@@ -8,9 +8,8 @@
     <h1>My Image Gallery</h1>
     <p>This is where I share my images</p>
     
-<img src="Beagle.png" alt="Ice cream is awesome">
-<br><br>
-<img src="Ice_Cream.png" alt="Beagles are cute">
+<img src="beagle_2.jpg" alt="Ice cream is awesome">
+
     
 </body>
 </html>
