--- a/index.html
+++ b/index.html
@@ -2,11 +2,12 @@
 <html>
 <head>
     <meta name="robots" content="noindex, nofollow">
-    <title>My Image Gallery</title>
+    <title>Application Screenshots</title>
 </head>
 <body>
-    <h1>My Image Gallery</h1>
-    <p>This is where I share my images</p>
+    <h1>Shiny App Screenshots</h1>
+    <p>Check out screenshots from our Shiny app!</p>
+    <p>Please note that these screenshots are from the app's beta version -- we are continuing to develop the app</p>
     
 <img src="beagle_2.jpg" alt="Ice cream is awesome">
 
