--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <p>Check out screenshots from our Shiny app!</p>
     <p>Please note that these screenshots are from the app's beta version -- we are continuing to develop the app</p>
     
-<img src="beagle_2.jpg" alt="Ice cream is awesome">
+<img src="beagle_2.jpg" alt="Beagles are cute">
 
     
 </body>
