--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <p>Please note that these screenshots are from the app's beta version -- we are continuing to develop the app</p>
     
 <img src="beagle_2.jpg" alt="Beagles are cute">
+    <p>Beagles are cute</p>
 
     
 </body>
