--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     </div>
     
     <div class="image-section">
-        <p class="image-caption">AI-detected concordance between Problem Repreentation language and identified diagnoses</p>
+        <p class="image-caption">AI-detected concordance between Problem Representation language and identified diagnoses</p>
         <img src="Feedback_3_ddx_language_mapping.png" alt="Language mapping screenshot">
     </div>
     
